force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageData__c/SVMXA360__COMM_ApplicationUsageData__c.object-meta.xml
<CustomObject>
    <description>Stores usage audit log data. Logs details on user actions corresponding to wizard usage.</description>
    <label>Application Usage Data</label>
    <nameField>
        <displayFormat>AUD-{0000000}</displayFormat>
        <label>Usage Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Usage Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>