force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageData__c/fields/SVMXA360__ActionDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ActionDeveloperName__c</fullName>
    <description>Stores the developer name of the action initiated</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Developer name of the action initiated</inlineHelpText>
    <label>Action Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>