force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageData__c/fields/SVMXA360__ActionName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ActionName__c</fullName>
    <description>Stores the initiated action name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the action initiated</inlineHelpText>
    <label>Action Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>