force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageData__c/fields/SVMXA360__ActionRecordId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ActionRecordId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Record Id of the wizard action step</description>
    <label>Action Record Id</label>
    <referenceTo>SVMXA360__CONF_ProcessWizardStep__c</referenceTo>
    <relationshipLabel>Application Usage Data</relationshipLabel>
    <relationshipName>ApplicationUsageData</relationshipName>
    <type>Lookup</type>
</CustomField>