force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageData__c/fields/SVMXA360__ApplicationName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ApplicationName__c</fullName>
    <description>Stores the Feature Name that is tracked. Possible values (Wizard)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Feature name tracked</inlineHelpText>
    <label>Application Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>