force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageData__c/fields/SVMXA360__EndTime__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EndTime__c</fullName>
    <description>Stores date time when action completes</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Time when action completes</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>