force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageData__c/fields/SVMXA360__EpochEndTime__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EpochEndTime__c</fullName>
    <description>Stores epoch time finish</description>
    <inlineHelpText>Epoch time value.</inlineHelpText>
    <label>End Time (in millisec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>