force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageData__c/fields/SVMXA360__EpochStartTime__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EpochStartTime__c</fullName>
    <description>Stores epoch time of action initiated</description>
    <inlineHelpText>Epoch time in milliseconds</inlineHelpText>
    <label>Start Time (in millisec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>