force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageData__c/fields/SVMXA360__ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectApiName__c</fullName>
    <description>Stores the object API name where the feature is used</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>API name of the object</inlineHelpText>
    <label>Object API name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>