force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageData__c/fields/SVMXA360__SourceRecordId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SourceRecordId__c</fullName>
    <description>Stores source recordId on which action is initiated</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Source record Id</inlineHelpText>
    <label>Source Record Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>