force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageData__c/fields/SVMXA360__StartTime__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__StartTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Stores Date-time when action initiated</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date time when action started</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>