force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageData__c/fields/SVMXA360__Status__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Status__c</fullName>
    <description>Stores the Action completion status. Possible values, 
Completed
Cancelled</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Status of the log</inlineHelpText>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>