force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageData__c/fields/SVMXA360__TimeTaken__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TimeTaken__c</fullName>
    <description>Time difference in seconds between end and start of the process.</description>
    <formula>IF(NOT(ISBLANK(SVMXA360__EpochEndTime__c)  &amp;&amp; ISBLANK(SVMXA360__EpochStartTime__c )) , 
   ( SVMXA360__EpochEndTime__c  -  SVMXA360__EpochStartTime__c ) / 1000,
    NULL
)</formula>
    <label>Time Taken in Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>