force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageData__c/fields/SVMXA360__UniqueId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__UniqueId__c</fullName>
    <description>Stores the UUID</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Unique Id to identify each transaction</inlineHelpText>
    <label>Unique Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>