force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageData__c/fields/SVMXA360__UserId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores User detail, who initiated the action</description>
    <inlineHelpText>User who initiated the action</inlineHelpText>
    <label>User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ApplicationUsageData</relationshipName>
    <type>Lookup</type>
</CustomField>